auth-lumen/auth-lumen-backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-lumen
  namespace: auth-lumen
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-lumen
  template:
    metadata:
      labels:
        app: auth-lumen
    spec:
      containers:
      - name: auth-lumen
        image: docker.pkg.github.com/mike-prog-lab/auth-tasks-lumen/auth-tl-php-fpm:1.2.1-dev
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 9000
      imagePullSecrets:
      - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: auth-lumen-service
  namespace: auth-lumen
  labels:
    tier: backend
spec:
  selector:
    app: auth-lumen
    tier: backend
  ports:
  - port: 9000
    targetPort: 9000
    protocol: TCP
