auth-lumen/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: auth-lumen
  labels:
    name: ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
      - auth.test.lumen.eml.ua
      secretName: auth-lumen-tls
  rules:
  - host: auth.test.lumen.eml.ua
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: auth-lumen-service
            port: 
              number: 80
